--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@progress/kendo-angular-charts": "^14.3.0",
+    "@progress/kendo-angular-common": "^14.3.0",
+    "@progress/kendo-angular-intl": "^14.3.0",
+    "@progress/kendo-angular-l10n": "^14.3.0",
+    "@progress/kendo-angular-navigation": "^14.3.0",
+    "@progress/kendo-angular-popup": "^14.3.0",
+    "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-licensing": "^1.3.5",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
